fixed nav-list overlaping bug

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -492,7 +492,7 @@
 
 
     .navbar .nav-list {
-      @apply h-[0] hidden;
+      @apply h-[0] hidden z-[10000];
     }
 
     .nav-list {
